--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -7,12 +7,10 @@ env:
   IMAGE_TAG_PR: ${{ github.event_name == 'pull_request' && github.event.pull_request.number }}
 on:
   pull_request:
-    types: [syncronize]
     paths:
       - Containerfile
       - Cargo.lock
       - rust-toolchain.toml
-      - build.rs
   push:
     branches:
       - main
@@ -20,7 +18,6 @@ on:
       - Containerfile
       - Cargo.lock
       - rust-toolchain.toml
-      - build.rs
 jobs:
   container:
     runs-on: ubuntu-latest
@@ -30,4 +27,4 @@ jobs:
       - name: Build container image
         run: podman build -t ${IMAGE_REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}${IMAGE_TAG_PR} .
       - name: Push container image
-        run: podman push --creds=${REGISTRY_USER}:${REGISTRY_PASSWORD} -t ${IMAGE_REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}${IMAGE_TAG_PR}
+        run: podman push --creds=${REGISTRY_USER}:${REGISTRY_PASSWORD} ${IMAGE_REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}${IMAGE_TAG_PR}
