--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,7 +1,7 @@
 env:
   REGISTRY_USER: ${{ github.actor }}
   REGISTRY_PASSWORD: ${{ github.token }}
-  IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_REGISTRY: ghcr.io/${{ github.repository }}
   IMAGE_NAME: reset-ctrl
   IMAGE_TAG: ${{ github.event_name == 'pull_request' && 'pr-' || 'latest' }}
   IMAGE_TAG_PR: ${{ github.event_name == 'pull_request' && github.event.pull_request.number }}
