--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,5 +1,5 @@
 env:
-  REGISTRY_USER: ${{ github.actor }}
+  REGISTRY_USER: ${{ github.repository_owner }}
   REGISTRY_PASSWORD: ${{ github.token }}
   IMAGE_REGISTRY: ghcr.io/${{ github.repository }}
   IMAGE_NAME: reset-ctrl
