Add PR event types

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ env:
   CONTAINER_REBUILD_ON_FILES_CHANGED: Cargo.lock|Containerfile|rust-toolchain.toml
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
   push:
     branches:
       - main
