--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.before }}..${{ github.event.after }}
 
       - name: Show commits for debugging
         run: git log -4
