--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: container
     if: ${{ always() }}
+    permissions:
+      packages: read
     steps:
       - name: Set image name
         run: |
