Adjust action image name

--- a/.github/workflows/container-gc.yml
+++ b/.github/workflows/container-gc.yml
@@ -1,6 +1,4 @@
 env:
-  REGISTRY_USER: ${{ github.repository_owner }}
-  REGISTRY_PASSWORD: ${{ github.token }}
   IMAGE_REGISTRY: ghcr.io/${{ github.repository }}
   IMAGE_NAME: reset-ctrl
   IMAGE_TAG: ${{ github.event_name == 'pull_request' && 'pr-' || 'latest' }}
@@ -17,6 +15,6 @@ jobs:
       - name: Delete all PR specific container images
         uses: actions/delete-package-versions@v4
         with: 
-          package-name: ${{env.IMAGE_REGISTRY}}/${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}${{env.IMAGE_TAG_PR}}
+          package-name: ${{env.IMAGE_NAME}}:${{env.IMAGE_TAG}}${{env.IMAGE_TAG_PR}}
           package-type: 'container'
           min-versions-to-keep: 0
