--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,16 +45,17 @@ jobs:
         if: ${{ env.REBUILD_CONTAINER != '' }}
         run: podman push --creds=${REGISTRY_USER}:${REGISTRY_PASSWORD} ${IMAGE_REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}${IMAGE_TAG_PR}
 
-  container-debug:
+  container-gc:
     runs-on: ubuntu-latest
-    env:
-      DELETE_PR_CONTAINER: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && 'true' }}
+    needs: container
+    if: ${{ always() }}
     steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
 
       - name: Run container gc
         env:
+          DELETE_PR_CONTAINER: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && 'true' }}
           CONTAINER_PAT: ${{ secrets.CONTAINER_PAT }}
         run: ruby utils/workflow-helper/container_gc.rb
 
