--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,7 +78,10 @@ jobs:
 
       - name: Try to pull PR specific image if exists
         run: |
-          podman pull --creds=${REGISTRY_USER}:${REGISTRY_PASSWORD} ${RUN_IMAGE_NAME} || echo "USE_LATEST_IMAGE=1" >> ${GITHUB_ENV}
+          podman pull --creds=${REGISTRY_USER}:${REGISTRY_PASSWORD} ${RUN_IMAGE_NAME} \
+          || (echo "USE_LATEST_IMAGE=1" >> ${GITHUB_ENV} \
+          && echo "RUN_IMAGE_NAME=${IMAGE_REGISTRY}/${IMAGE_NAME}:latest" >> ${GITHUB_ENV})
+
 
       - name: Try to pull latest image if no PR specific image was found
         if: ${{ env.USE_LATEST_IMAGE != '' }}
