--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,7 +94,7 @@ jobs:
         run: podman container runlabel shell ${RUN_IMAGE_NAME} -- cargo build --release --bin reset_ctrl
 
       - name: Building for thumbv7m-none-eabi
-        run: podman container runlabel shell ${RUN_IMAGE_NAME} -- cargo build --release --bin stm32-poc --target thumbv7m-none-eabi --features bare-metal
+        run: podman container runlabel shell ${RUN_IMAGE_NAME} -- cargo build --release --bin stm32-* --target thumbv7m-none-eabi --features bare-metal
 
       - name: Running tests
         run: podman container runlabel shell ${RUN_IMAGE_NAME} -- cargo test
