--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,14 @@ nb = { version = "1.0.0" }
 heapless = { version = "0.8", default-features = false, features = ["serde"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 
+[patch.crates-io]
+embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
+embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
+embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
+embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
+embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
+
 [[bin]]
 name = "stm32-poc"
 required-features = ["bare-metal"]
