feat: add async output handling and usb output

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,10 @@ required-features = ["bare-metal"]
 name = "stm32-usb-midi-poc"
 required-features = ["bare-metal"]
 
+[[bin]]
+name = "stm32-encoder-async-poc"
+required-features = ["bare-metal"]
+
 [profile.dev]
 opt-level = "s"
 
