--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ nb = { version = "1.0.0" }
 
 heapless = { version = "0.8", default-features = false, features = ["serde"] }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
+static_cell = { version = "2.0.0",  default-features = false, features = [] }
 
 [patch.crates-io]
 embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
@@ -65,4 +66,3 @@ opt-level = "s"
 
 [profile.release]
 debug = 2
-
